--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="keywords" content="cs, about me">
+  <meta name="keywords" content="JKGriffon, Kiryuhan, cv, about me">
   <meta name="description" content="site about me">
+  <link rel="stylesheet" href="styles.css">
   <title>JKGriffon description</title>
 </head>
 
